# geekbench-dist-rust

./: .gitignore  Cargo.toml
src/: db.rs  main.rs
